--- a/index.html
+++ b/index.html
@@ -50,8 +50,6 @@
 			<p class="copyright">Copyright 2015. Relaxr.</p>
 		</footer>
 
-		<script src= "script.js">
-
-		</script>
+		<script src= "script.js"></script>
 	</body>
 </html>
